calculate GDP from gapminder data

--- a/code/gapminder_initial_report.Rmd
+++ b/code/gapminder_initial_report.Rmd
@@ -13,6 +13,11 @@ knitr::opts_chunk$set(echo = TRUE)
 
 This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
 
+#***Advantages of using Rmarkdown***
+By using R markdown, 
+*I have been able to easily reproduce my analysis, and 
+*have the people look and track how I carried out my analysis
+
 When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
 
 ```{r cars}
@@ -22,7 +27,7 @@ summary(cars)
 ## Including Plots
 
 You can also embed plots, for example:
-
+The average number of cylinders in our dataset was `r mean(cars$speed)` (sd= `r sd(cars$speed)`)
 ```{r pressure, echo=FALSE}
 plot(pressure)
 ```
